# cplusplus_template

./: .gitignore  CMakeLists.txt  main.cpp  meaner.cpp  meaner.hpp
test/: hello_test.cc  test.cpp
